@@ -1,7 +1,10 @@
 package ae2.crafting.graph;
 
+import ae2.api.crafting.IPatternDetails;
 import ae2.api.stacks.AEKey;
 import ae2.crafting.CraftingCalculation;
+import ae2.helpers.patternprovider.PseudoPatternDetails;
+import com.google.common.math.LongMath;
 import it.unimi.dsi.fastutil.objects.ObjectOpenHashSet;
 
 import java.util.Set;
@@ -16,12 +19,14 @@ public class GraphBuilder {
     public CraftingGraph buildGraph(AEKey output, long requestedAmount) throws InterruptedException {
         var graph = new CraftingGraph();
         var requestStack = new ObjectOpenHashSet<AEKey>();
+        var checkedEmitters = new ObjectOpenHashSet<AEKey>();
 
-        var rootNode = buildNodeRecursive(output, graph, requestStack);
-        if (rootNode != null) {
-            graph.setRootNode(rootNode);
-            rootNode.setDemandAmount(requestedAmount);
+        var rootNode = buildNodeRecursive(output, graph, requestStack, checkedEmitters, true);
+        if (rootNode == null) {
+            throw unsupported("root has no crafting pattern");
         }
+        graph.setRootNode(rootNode);
+        rootNode.setDemandAmount(requestedAmount);
 
         return graph;
     }
@@ -29,21 +34,29 @@ public class GraphBuilder {
     private CraftingGraphNode buildNodeRecursive(
         AEKey what,
         CraftingGraph graph,
-        Set<AEKey> requestStack
+        Set<AEKey> requestStack,
+        Set<AEKey> checkedEmitters,
+        boolean root
     ) throws InterruptedException {
         if (requestStack.contains(what)) {
-            if (calc.cycleHasNetOutput(what)) {
-                graph.addCyclicNode(new CraftingGraph.NodeKey(what, null));
-            }
-            return null;
+            throw unsupported("recursive crafting dependency");
+        }
+        if (checkedEmitters.add(what) && calc.canEmitFor(what)) {
+            throw unsupported("crafting emitter input");
         }
 
         var patterns = calc.getCraftingFor(what);
         if (patterns.isEmpty()) {
+            if (root) {
+                throw unsupported("root has no crafting pattern");
+            }
             return null;
         }
+        if (patterns.size() != 1) {
+            throw unsupported("multiple crafting patterns for one output");
+        }
 
-        var primaryPattern = patterns.get(0);
+        var primaryPattern = patterns.getFirst();
         var nodeKey = new CraftingGraph.NodeKey(what, primaryPattern);
 
         var existing = graph.getNode(nodeKey);
@@ -51,6 +64,7 @@ public class GraphBuilder {
             return existing;
         }
 
+        validatePattern(what, primaryPattern);
         long outputAmount = primaryPattern.getPrimaryOutput().amount();
         var node = new CraftingGraphNode(what, primaryPattern, outputAmount);
         graph.putNode(nodeKey, node);
@@ -59,22 +73,47 @@ public class GraphBuilder {
         calc.handlePausing();
 
         for (var inputEntry : primaryPattern.getInputs()) {
-            for (var possible : inputEntry.possibleInputs()) {
-                var inputKey = possible.what();
-                long inputAmount = possible.amount();
+            var possible = inputEntry.possibleInputs()[0];
+            var inputKey = possible.what();
+            long inputAmount = LongMath.saturatedMultiply(possible.amount(), inputEntry.getMultiplier());
 
-                var childNode = buildNodeRecursive(inputKey, graph, requestStack);
+            var childNode = buildNodeRecursive(inputKey, graph, requestStack, checkedEmitters, false);
 
-                var edge = new CraftingGraphEdge(inputKey, inputAmount, childNode);
-                node.addInput(edge);
+            var edge = new CraftingGraphEdge(inputKey, inputAmount, childNode);
+            node.addInput(edge);
 
-                if (childNode != null) {
-                    childNode.addParent(node);
-                }
+            if (childNode != null) {
+                childNode.addParent(node);
             }
         }
 
         requestStack.remove(what);
         return node;
+    }
+
+    static void validatePattern(AEKey what, IPatternDetails pattern) {
+        if (PseudoPatternDetails.isPseudo(pattern)) {
+            throw unsupported("pseudo crafting pattern");
+        }
+        var outputs = pattern.getOutputs();
+        if (outputs.size() != 1 || outputs.getFirst().amount() <= 0 || !outputs.getFirst().what().equals(what)) {
+            throw unsupported("multiple, empty, or mismatched pattern outputs");
+        }
+        for (var input : pattern.getInputs()) {
+            var possibleInputs = input.possibleInputs();
+            if (possibleInputs.length != 1 || possibleInputs[0].amount() <= 0) {
+                throw unsupported("substitute or empty pattern input");
+            }
+            if (input.getMultiplier() <= 0) {
+                throw unsupported("non-positive pattern input multiplier");
+            }
+            if (input.getRemainingKey(possibleInputs[0].what()) != null) {
+                throw unsupported("pattern input remainder");
+            }
+        }
+    }
+
+    private static IllegalArgumentException unsupported(String reason) {
+        return new IllegalArgumentException("Graph crafting does not support " + reason);
     }
 }
